--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
                             <a class="nav-link" routerLink="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/todos" *ngIf="authService.isLoggedIn()">Todos</a>
+                            <a class="nav-link" routerLink="/users/{{userId}}/todos" *ngIf="authService.isLoggedIn()">Todos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" routerLink="/users" *ngIf="authService.isLoggedIn() && accessRoles(['ADMIN', 'SUPPORT'])">Users</a>
