add behaviorSubject for login

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
     </div>
 </div> -->
 <div class="row mt-5">
-    <div class="col">
+    <div class="col mx-5">
         <p>The ToDo application is a sample web application to add, edit, or delete a todo task.</p>
 
         <strong><i>Development Stack</i></strong>
@@ -47,11 +47,9 @@
                     <li>admin1@todo.com</li>
                     <li>admin2@todo.com</li>
                     <li>admin3@todo.com</li>
-                    <br>
                     <li>support1@todo.com</li>
                     <li>support2@todo.com</li>
                     <li>support3@todo.com</li>
-                    <br>
                     <li>user1@todo.com</li>
                     <li>user2@todo.com</li>
                     <li>user3@todo.com</li>
@@ -95,7 +93,7 @@
                     <li>Refresh token</li>
                     <li>Replace 4200 with ec2 instance</li>
                 </ul>
-            </li> 
+            </li>
         </ul>
 
         <i><strong>Features</strong></i>
@@ -111,12 +109,12 @@
         <i><strong>GitHub Links</strong></i>
         <ul>
             <li>
-                <a href="https://github.com/hmishaeil/todo-frontend">
+                <a href="https://github.com/hmishaeil/todo-frontend" target="_blank">
                     https://github.com/hmishaeil/todo-frontend
                 </a>
             </li>
             <li>
-                <a href="https://github.com/hmishaeil/todo-backend">
+                <a href="https://github.com/hmishaeil/todo-backend" target="_blank">
                     https://github.com/hmishaeil/todo-backend
                 </a>
             </li>
