--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,57 +1,54 @@
-<div class="container">
-    <div class="row">
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <!-- Container wrapper -->
-            <div class="container-fluid">
-                <!-- Toggle button -->
-                <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
-                    data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
+<div class="row">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(0, 0, 0, 0.1);">
+        <!-- Container wrapper -->
+        <div class="container-fluid">
+            <!-- Toggle button -->
+            <button class="navbar-toggler" type="button" data-mdb-toggle="collapse"
+                data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <i class="fas fa-bars"></i>
+            </button>
 
-                <!-- Collapsible wrapper -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <!-- Navbar brand -->
-                    <a class="navbar-brand mt-2 mt-lg-0" routerLink="/">
-                        <img src="./assets/todo_icon.png" height="35" alt="" loading="lazy" />
-                    </a>
-                    <!-- Left links -->
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" routerLink="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" routerLink="/users/{{userId}}/todos" *ngIf="authService.isLoggedIn()">Todos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" routerLink="/users" *ngIf="authService.isLoggedIn() && accessRoles(['ADMIN', 'SUPPORT'])">Users</a>
-                        </li>
-                    </ul>
-                    <!-- Left links -->
-                </div>
-                <!-- Collapsible wrapper -->
-
-                <!-- Right elements -->
-                <div class="d-flex align-items-center">
-                    <a class="btn btn-sm btn-outline-success me-3" routerLink="/login"
-                        *ngIf="!authService.isLoggedIn()">
-                        Login
-                    </a>
-                    <a class="btn btn-sm btn-outline-primary me-3" routerLink="/signup"
-                        *ngIf="!authService.isLoggedIn()">
-                        Signup
-                    </a>
-                    <a class="btn btn-sm btn-outline-secondary me-3" (click)="onLogout()"
-                        *ngIf="authService.isLoggedIn()">
-                        Logout
-                    </a>
-                </div>
-                <!-- Right elements -->
+            <!-- Collapsible wrapper -->
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <!-- Navbar brand -->
+                <a class="navbar-brand mt-2 mt-lg-0" routerLink="/">
+                    <img src="./assets/todo_icon.png" height="35" alt="" loading="lazy" />
+                </a>
+                <!-- Left links -->
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/users/{{userId}}/todos"
+                            *ngIf="authService.isLoggedIn()">Todos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" routerLink="/users"
+                            *ngIf="authService.isLoggedIn() && accessRoles(['ADMIN', 'SUPPORT'])">Users</a>
+                    </li>
+                </ul>
+                <!-- Left links -->
             </div>
-            <!-- Container wrapper -->
-        </nav>
-        <!-- Navbar -->
-    </div>
+            <!-- Collapsible wrapper -->
+            <!-- Right elements -->
+            <div class="d-flex align-items-center">
+                <a class="btn btn-sm btn-outline-success me-3" routerLink="/login" *ngIf="!authService.isLoggedIn()">
+                    Login
+                </a>
+                <a class="btn btn-sm btn-outline-primary me-3" routerLink="/signup" *ngIf="!authService.isLoggedIn()">
+                    Signup
+                </a>
+                <span class="badge mx-3" [ngClass]="getClassPerUserRole()">{{username}}</span>
+                <a class="btn btn-sm btn-outline-secondary me-3" (click)="onLogout()" *ngIf="authService.isLoggedIn()">
+                    Logout
+                </a>
+            </div>
+            <!-- Right elements -->
+        </div>
+        <!-- Container wrapper -->
+    </nav>
+    <!-- Navbar -->
 </div>
