--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,8 +12,8 @@
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                     placeholder="Enter email" [(ngModel)]="username" name="email">
             </div>
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
+            <div class="form-check mt-2 mx-1">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1" [checked]="rememberMe" (change)="onRememberMeChange()">
                 <label class="form-check-label" for="exampleCheck1">Remember me</label>
             </div>
             <br>
