--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -76,21 +76,11 @@
                 <ul>
                     <li>Pagination & Sorting</li>
                     <li>Token for reset passwords</li>
-                    <li>Connect github to build processes</li>
-                    <li>Cron job to reset the database entities</li>
-                    <li>Encrypting the sensitive information in app.prop</li>
-                    <li>Unifying the error messages</li>
-                    <li>Developing test cases</li>
-                    <li>Check the user id with the requested user id</li>
+                    <li>Connect github to back-end</li>
                     <li>Check the permission in Angular to access a route</li>
                     <li>Sign up caching guava or captcha</li>
                     <li>Make sure the subscription is unsubscribed successfully.</li>
-                    <li>Soft delete</li>
-                    <li>Remember me feature</li>
-                    <li>Remove add-todo button for admin</li>
-                    <li>favicon</li>
                     <li>Refresh token</li>
-                    <li>Replace 4200 with ec2 instance</li>
                 </ul>
             </li>
         </ul>
