--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,6 +22,7 @@
     <div class="col mx-5">
         <p>The ToDo application is a sample web application to add, edit, or delete a todo task.</p>
 
+        <br>
         <strong><i>Development Stack</i></strong>
         <ul>
             <li>Java programming language</li>
@@ -29,8 +30,11 @@
             <li>Angular Framework</li>
             <li>Bootstrap</li>
             <li>Amazon SES, S3, RDS, EC2</li>
+            <li>GitHub</li>
+            <li>Google Guava Cache</li>
+            <li>Amazon CodeBuild and CodePipeline</li>
         </ul>
-
+        <br>
         <strong><i>Data Entities</i></strong>
         <ul>
             <li>
@@ -41,28 +45,46 @@
                     <li>USER</li>
                 </ul>
             </li>
+            <br>
             <li>
-                <strong>Users</strong>
+                <strong>User Groups</strong>
                 <ul>
-                    <li>admin1@todo.com</li>
-                    <li>admin2@todo.com</li>
-                    <li>admin3@todo.com</li>
-                    <li>support1@todo.com</li>
-                    <li>support2@todo.com</li>
-                    <li>support3@todo.com</li>
-                    <li>user1@todo.com</li>
-                    <li>user2@todo.com</li>
-                    <li>user3@todo.com</li>
-                    <li>user4@todo.com</li>
-                    <li>user5@todo.com</li>
+                    <li>
+                        <span>Admins</span>
+                        <ul>
+                            <li>admin1@todo.com</li>
+                            <li>admin2@todo.com</li>
+                            <li>admin3@todo.com</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>Supports</span>
+                        <ul>
+                            <li>support1@todo.com</li>
+                            <li>support2@todo.com</li>
+                            <li>support3@todo.com</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span>Users</span>
+                        <ul>
+                            <li>user1@todo.com</li>
+                            <li>user2@todo.com</li>
+                            <li>user3@todo.com</li>
+                            <li>user4@todo.com</li>
+                            <li>user5@todo.com</li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
+            <br>
             <li>
                 <strong>Passwords</strong>
                 <ul>
                     For experimental purposes, the password for all the user is <i>password</i>
                 </ul>
             </li>
+            <br>
             <li>
                 <strong>Todos</strong>
                 <ul>
@@ -71,20 +93,20 @@
                     </li>
                 </ul>
             </li>
+            <br>
             <li>
                 <strong>Items under development</strong>
                 <ul>
-                    <li>Pagination & Sorting</li>
                     <li>Token for reset passwords</li>
                     <li>Connect github to back-end</li>
-                    <li>Check the permission in Angular to access a route</li>
-                    <li>Sign up caching guava or captcha</li>
                     <li>Make sure the subscription is unsubscribed successfully.</li>
                     <li>Refresh token</li>
+                    <li>admin creates todo for user</li>
                 </ul>
             </li>
         </ul>
 
+        <br>
         <i><strong>Features</strong></i>
         <ul>
             <li>Users can sign up, then they will receive an email to verify their email.</li>
@@ -95,6 +117,7 @@
             <li>Support users can only view the users.</li>
         </ul>
 
+        <br>
         <i><strong>GitHub Links</strong></i>
         <ul>
             <li>
@@ -109,6 +132,7 @@
             </li>
         </ul>
 
+        <br>
         <i><strong>Screenshots</strong></i>
 
         <div class="row my-5">
@@ -119,4 +143,7 @@
         </div>
         <br>
     </div>
+
+
+
 </div>
