--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-light text-center text-lg-start fixed-bottom">
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.1);">
-    © 2021 ToDo Application
+    <a routerLink="mailto:hmishaeil@gmail.com">Hooman Mishaeil</a> © 2021 ToDo Application
     <div>
     </div>
   </div>
