--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,8 @@
 <footer class="bg-light text-center text-lg-start fixed-bottom">
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.1);">
-    <a routerLink="mailto:hmishaeil@gmail.com">Hooman Mishaeil</a> © 2021 ToDo Application
-    <div>
-    </div>
+     © 2021 ToDo Application
+      <p>
+        Hooman Mishaeil
+      </p>
   </div>
 </footer>
