admin created todos for user changes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -20,7 +20,7 @@
 </div> -->
 <div class="row mt-5">
     <div class="col mx-5">
-        <p>The ToDo application is a sample web application to add, edit, or delete a todo task.</p>
+        <p>The ToDo application is a sample web application to apply CRUD operations on a todo task.</p>
 
         <br>
         <strong><i>Development Stack</i></strong>
@@ -30,6 +30,7 @@
             <li>Angular Framework</li>
             <li>Bootstrap</li>
             <li>Amazon SES, S3, RDS, EC2</li>
+            <li>MySQL</li>
             <li>GitHub</li>
             <li>Google Guava Cache</li>
             <li>Amazon CodeBuild and CodePipeline</li>
@@ -97,9 +98,7 @@
             <li>
                 <strong>Items under development</strong>
                 <ul>
-                    <li>Token for reset passwords</li>
-                    <li>Make sure the subscription is unsubscribed successfully.</li>
-                    <li>admin creates todo for user</li>
+                    <li>idle auto logout</li>
                 </ul>
             </li>
         </ul>
