--- a/src/app/components/todos/todos.component.html
+++ b/src/app/components/todos/todos.component.html
@@ -40,7 +40,9 @@
       </thead>
       <tbody *ngIf="todos.length">
         <tr *ngFor="let todo of todos; let todoNumber = index ">
-          <th scope="row">{{todoNumber + 1}}</th>
+          <th scope="row">{{todoNumber + 1}}
+            <i class="fa fa-lg fa-arrow-circle-up text-danger mx-1" *ngIf="todo.byAdmin"></i>
+          </th>
           <td>{{todo.name | titlecase}}</td>
           <td>{{todo.description | slice:0:10 | titlecase }}{{todo.description.length > 10 ? "..." : ""}}</td>
           <td>
